app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: default
spec:
  selector:
    app: todo-app
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
